Revision history for DBIx::Class

        - Restored mk_classaccessor method for compatibility

0.08002 2007-06-20 06:10:00
        - add scope guard to Row::insert to ensure rollback gets called
        - more heuristics in Row::insert to try and get insert order right
        - eliminate vestigial code in PK::Auto
        - more expressive DBI errors
        - soften errors during deploy
        - ensure_connected before txn_begin to catch stomping on transaction
          depth
        - new method "rethrow" for our exception objects

0.08001 2007-06-17 21:21:02
        - Cleaned up on_connect handling for versioned
        - removed DateTime use line from multi_create test
        - hid DBIx::ContextualFetch::st override in CDBICompat

0.08000 2007-06-17 18:06:12
        - Fixed DBIC_TRACE debug filehandles to set ->autoflush(1)
        - Fixed circular dbh<->storage in HandleError with weakref

0.07999_06 2007-06-13 04:45:00
        - tweaked Row.pm to make last_insert_id take multiple column names
        - Fixed DBIC::Storage::DBI::Cursor::DESTROY bug that was
          messing up exception handling
        - added exception objects to eliminate stacktrace/Carp::Clan
          output redundancy
        - setting $ENV{DBIC_TRACE} defaults stacktrace on.
        - added stacktrace option to Schema, makes throw_exception
          use "confess"
        - make database handles use throw_exception by default
        - make database handles supplied by a coderef use our
          standard HandleError/RaiseError/PrintError
        - add "unsafe" connect_info option to suppress our setting
          of HandleError/RaiseError/PrintError
        - removed several redundant evals whose sole purpose was to
          provide extra debugging info
        - fixed page-within-page bug (reported by nilsonsfj)
        - fixed rare bug when database is disconnected inbetween
          "$dbh->prepare_cached" and "$sth->execute"

0.07999_05 2007-06-07 23:00:00