@@ -1,5 +1,6 @@
 Revision history for DBIx::Class
 
+        - Patch to fix ? in data for NoBindVars (from Tom Hukins)
         - Restored mk_classaccessor method for compatibility
 
 0.08002 2007-06-20 06:10:00
